# excavation-sim

./: .gitignore  CMakeLists.txt  NOTES.md  README.md  run.sh
shaders/: basic.frag  basic.vert
src/: main.cpp
src/rendering/: camera.cpp  camera.h  shader.cpp  shader.h
src/simulation/: terrain.cpp  terrain.h
